error in images with same names but uppercase (windows not supported)

--- a/src/pages/wallet/wallet.html
+++ b/src/pages/wallet/wallet.html
@@ -182,7 +182,7 @@
           <b><H1 align="center" style="color: #ffffff; font-size: 12pt;">Total Balance</H1></b>   <!-- style="color: #d08a29;"  --> 
       </ion-col>
       <ion-col style="text-align: right">
-          <button ion-button large color="navbarColorBlack" (click)="goToLogin()"><img src="app-assets/imgs/EXIT.svg"></button>  <!-- id="myImage"  height="50px" width="50px" -->
+          <button ion-button large color="navbarColorBlack" (click)="goToLogin()"><img src="app-assets/imgs/EXIT-2.svg"></button>  <!-- id="myImage"  height="50px" width="50px" -->
           <!-- <button ion-button right (click)="goToLogin()">Exit</button> -->
       </ion-col>
     </ion-row>
