error in image with same names but uppercase (windows not supported)

--- a/src/pages/exchange/exchange.html
+++ b/src/pages/exchange/exchange.html
@@ -42,7 +42,7 @@
           <b><H1 align="center" style="color: #ffffff; font-size: 12pt;">ZRM Exchange</H1></b>   <!-- style="color: #d08a29;"  -->  <!--  font-size: 30pt; -->
       </ion-col>
       <ion-col style="text-align: right"> <!--  style="text-align: right" -->
-          <button ion-button large color="navbarColorBlack" (click)="goToLogin()"><img src="app-assets/imgs/EXIT.svg"></button>  <!-- id="myImage" height="50px" width="50px" -->
+          <button ion-button large color="navbarColorBlack" (click)="goToLogin()"><img src="app-assets/imgs/EXIT-2.svg"></button>  <!-- id="myImage" height="50px" width="50px" -->
           <!-- <button ion-button right (click)="goToLogin()">Exit</button> -->
       </ion-col>
     </ion-row>
